Fixes gst jpegdec for corrupt frames. See https://bugzilla.gnome.org/show_bug.cgi?id=635734